static/css/dark.css
html, footer {
	background: black;
}

html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, img {
	background: black;
	color: #FEFEFD;
}

a:visited {
	color: #FEFEFD;
}

.caption {
	color: #808080;
}

.by-line {
	color: #808080;
}

.site-header {
	border-bottom: thin solid #FEFEFD80;
}

.site-footer {
    border-top: thin solid #FEFEFD80;
}

